extra_include_dirs = [ ".", "//framework", "//thirdparty" ]

template("bcs_library") {
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }
  
  target(bcs_library_type, target_name)
  {
    forward_variables_from(invoker, "*")
  }
}

template("bcs_static_library") {
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }
  
  static_library(target_name)
  {
    forward_variables_from(invoker, "*")
  }
}

template("bcs_shared_library") {
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }
  
  shared_library(target_name)
  {
    forward_variables_from(invoker, "*")
  }
}

template("bcs_executable") {
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }
  
  executable(target_name)
  {
    forward_variables_from(invoker, "*")
  }
}

template("bcs_source_set") {
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }
  
  source_set(target_name)
  {
    forward_variables_from(invoker, "*")
  }
}
